# VAT-SDK

./: README.md  pyproject.toml
.github/workflows/: deploy_sdk.yml
examples/: ScanLineEdgel.py  bulk_image_update.py  file_upload.py  filter_images.py  fix_images.py  get_image.py  pyproject.toml  requirements.txt
examples/ScanLines/: bla.py
vaapi/: __init__.py  base_client.py
vaapi/behavior_frame_option/: client.py
vaapi/behavior_options/: client.py
vaapi/behavior_options_state/: client.py
vaapi/cognition_frame/: client.py
vaapi/cognition_representation/: client.py
vaapi/core/: pagination.py
vaapi/dataset/: client.py
vaapi/events/: client.py
vaapi/experiment/: client.py
vaapi/game/: client.py
vaapi/image/: client.py
vaapi/log_first_frame/: client.py
vaapi/log_status/: client.py
vaapi/logs/: client.py
vaapi/model/: client.py
vaapi/motion_frame/: client.py
vaapi/motion_representation/: client.py
vaapi/raw_gc_situation/: client.py
vaapi/robots/: client.py
vaapi/teams/: client.py
vaapi/timeline/: client.py
vaapi/types/: cognition_frame.py  cognition_representation.py  event.py  experiment.py  game.py  image.py  log.py  log_first_frame.py  motion_frame.py  motion_representation.py  raw_gc_situation.py  video.py
vaapi/video/: client.py
vaapi/videos/: client.py
vaapi/xabsl_symbol_complete/: client.py
vaapi/xabsl_symbol_sparse/: client.py
