[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vaapi"
authors = [
    { name = "NaoTH Berlin United", email = "nao-team@informatik.hu-berlin.de" },
]
description = "Python utils for adding logs to our Visual Analytics Tool"
readme = "README.md"
requires-python = ">=3.10.9"
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dynamic = ["version"]

dependencies = [
    "protobuf==7.34.1",
    "httpx==0.28.1",
    "pydantic==2.12.5",
    "requests==2.33.1",
]

[tool.setuptools.dynamic]
version = { attr = "vaapi.__version__" }
